# 2026_ai_rookie_course9

./: README.md  main.py  pyproject.toml
lab1/: README.md  __init__.py  constitution.py
lab2/: README.md  __init__.py  reward.py  test_cases.py
lab3/: README.md  __init__.py  grpo_training.py  system_prompt.txt
