[project]
name = "ai-rookie-course9"
version = "0.1.0"
description = "AI 安全與價值對齊 — 實作課程（Lab 1 / Lab 2 / Lab 3）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "trl>=0.12.0",
    "peft>=0.13.0",
    "datasets>=2.18.0",
    "matplotlib>=3.7.0",
    "accelerate>=0.30.0",
]

[tool.uv]
package = false
